--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,16 @@
-/* body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  padding: 0 !important;
+  margin: 0 !important;
+  color: #333 !important;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-} */
+.active {
+  border-bottom: 2px solid cyan;
+}
+
+.nav-link {
+  font-weight: 400;
+  margin-left: 25px !important;
+  padding: 6px !important;
+  padding-bottom: 3px !important;
+}
