--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,8 +10,14 @@
 
 .active {
   /* border-bottom: 2px solid cyan; */
+  background-color: transparent;
   text-decoration: underline solid cyan 1.5px;
   text-underline-offset: 7px;
+}
+
+.list-group-item.active {
+  color: #fff !important;
+  text-decoration: none;
 }
 
 .nav-link {
