--- a/client/src/index.css
+++ b/client/src/index.css
@@ -60,3 +60,55 @@
 .card-button {
   border-radius: 0px;
 }
+
+/* #####################JUMBOTRON######################### */
+
+/* jumbotron color animation css */
+.jumbotron {
+  width: 30wh;
+  height: 30vh;
+  color: #fff;
+  background: linear-gradient(90deg, #087ee1, #05e8ba, #50d8d7, #923993);
+  background-size: 400% 400%;
+  -webkit-animation: Gradient 15s ease-in-out infinite;
+  -moz-animation: Gradient 15s ease-in-out infinite;
+  animation: Gradient 15s ease-in-out infinite;
+}
+
+@-webkit-keyframes Gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@-moz-keyframes Gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes Gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+/* ######################################## */
