--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,6 +12,30 @@
   color: #333 !important;
 } */
 
+/* ############# Regular Style ############# */
+
+/*  ----------input search cancel button ---------- */
+input[type="search"]::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+
+  height: 18px;
+  width: 18px;
+  margin-left: 0.4em;
+  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23777'><path d='M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z'/></svg>");
+  cursor: pointer;
+}
+
+.nav-link {
+  font-weight: 400;
+  margin-left: 10px !important;
+  margin-right: 10px !important;
+  padding: 6px !important;
+  padding-bottom: 3px !important;
+}
+
+/* ############# Regular Style ############# */
+
+/* ############# Bootstrap style override ############# */
 .active {
   /* border-bottom: 2px solid cyan; */
   background-color: transparent;
@@ -42,13 +66,15 @@
   --bs-form-select-bg-img: none;
 }
 
-.nav-link {
-  font-weight: 400;
-  margin-left: 10px !important;
-  margin-right: 10px !important;
-  padding: 6px !important;
-  padding-bottom: 3px !important;
+.form-control {
+  -webkit-box-shadow: none !important;
 }
+
+.form-control:focus {
+  border-color: #bbb;
+}
+
+/* ############# Bootstrap style override ############# */
 
 /* antd */
 
