--- a/client/src/index.css
+++ b/client/src/index.css
@@ -47,9 +47,10 @@ input[type="search"]::-webkit-search-cancel-button {
 
 .list-group-item.active {
   color: #fff !important;
-  background-color: #0dcaf0;
-  border: none;
-  text-decoration: none;
+  background-color: #0dcaf0 !important;
+  /* border: 1px solid #dee2e6; */
+  border: none !important;
+  text-decoration: none !important;
 }
 
 .btn-info {
@@ -57,6 +58,10 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 
 .btn-outline-info:hover {
+  color: #fff !important;
+}
+
+.btn-danger {
   color: #fff !important;
 }
 
